# UnitTest-1

./: .gitignore  CMakeLists.txt  DatastructuresTest.cpp  DatastructuresTest.h  TestSuite.cpp  TestSuite.h  UnitTest.cpp  UnitTest.h  UnitTestExceptions.h  UnitTestLog.h  libraryTests.cpp  libraryTests.h  masterTestHolder.cpp  masterTestHolder.h  singleFunctionTest.cpp  singleFunctionTest.h  singleTest.cpp  singleTest.h  testSuite.cpp  unitTest.cpp  unitTestLog.h
Documentation/: UnitTestDocumentation.tex  build.bash  build.bat  documentation.tex  doxygenConfig  shortDocumentation.tex
Documentation/doxygenFiles/: .gitignore
Documentation/doxygenFiles/latex/: DatastructuresTest_8cpp.tex  DatastructuresTest_8h.tex  TestSuite_8cpp.tex  TestSuite_8h.tex  UnitTestExceptions_8h.tex  UnitTestLog_8h.tex  UnitTestMain_8cpp.tex  UnitTest_8cpp.tex  UnitTest_8h.tex  annotated.tex  bug.tex  classadsSuite.tex  classadsTest.tex  classsetSuite.tex  classsetTest.tex  classtest_1_1DatastructuresLibraryTest.tex  classtest_1_1generalTestException.tex  classtest_1_1libraryTests.tex  classtest_1_1masterTestHolder.tex  classtest_1_1nullFunctionException.tex  classtest_1_1singleFunctionTest.tex  classtest_1_1singleTest.tex  classtest_1_1testSuite.tex  classtest_1_1unknownException.tex  defaultTestInit_8cpp.tex  dir_842e32f441ec3669c8d08877cfe6cd6d.tex  files.tex  hierarchy.tex  masterTestHolder_8cpp.tex  masterTestHolder_8h.tex  namespaces.tex  namespacetest.tex  singleTest_8cpp.tex  singleTest_8h.tex
Exceptions/: CMakeLists.txt  Exceptions.cpp  Exceptions.h  generalTestException.h  nullFunctionException.h  unknownException.h
UnitTestExe/: CMakeLists.txt  UnitTestMain.cpp  defaultTestInit.cpp
Unix/: UnitTestCompile.bash  UnitTestUnixBuild.bash  UnitTestUnixDeconstruct.bash
Windows/: UnitTest.vcxproj  UnitTest.vcxproj.filters  UnitTestWindowsBuild.bat  UnitTestWindowsDeconstruct.bat
