IF(NOT UNITTEST_LIB_CMAKE)
SET(UNITTEST_LIB_CMAKE 1)

INCLUDE(${GLOBAL_DIR}/Datastructures/CMakeLists.txt)

MESSAGE(STATUS )
MESSAGE(STATUS ========= Unit Test (Lib) ==========)
MESSAGE(STATUS )

SET(CUR_SRC ${GLOBAL_DIR}/UnitTest)
INCLUDE_DIRECTORIES(${CUR_SRC})

SET( SRC_H
	${CUR_SRC}/UnitTest.h
)

SET( SRC_CPP
	${CUR_SRC}/UnitTest.cpp
)

ADD_LIBRARY( UnitTestLib STATIC
	${SRC_CPP}
	${SRC_H}
)

ENDIF(NOT UNITTEST_LIB_CMAKE)