IF(NOT UNITTEST_EXE_CMAKE)
SET(UNITTEST_EXE_CMAKE 1)

MESSAGE(STATUS )
MESSAGE(STATUS ========= Unit Test (Exe) ==========)
MESSAGE(STATUS )

SET(CUR_SRC ${GLOBAL_DIR}/UnitTest/UnitTestExe)
INCLUDE_DIRECTORIES(${CUR_SRC})


ADD_EXECUTABLE( UnitTestExe ${CUR_SRC}/UnitTestMain.cpp ${TEST_INIT} )
TARGET_LINK_LIBRARIES( UnitTestExe ${UNIT_TEST_LIBRARIES} ${OS_LIBS} UnitTestLib Datastructures) 

ENDIF(NOT UNITTEST_EXE_CMAKE)